{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 79,
  "lineage": "d75ef8f4-41ae-c082-f91f-5d7decf7751f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "elkademy-front-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:823916992624:loadbalancer/net/elkademy-front/cd95ee3481c5513e",
            "arn_suffix": "net/elkademy-front/cd95ee3481c5513e",
            "dns_name": "elkademy-front-cd95ee3481c5513e.elb.eu-west-3.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:823916992624:loadbalancer/net/elkademy-front/cd95ee3481c5513e",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "elkademy-front",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-046ff603bf3c40695"
              },
              {
                "subnet_id": "subnet-04fc28ef7b68a9bda"
              },
              {
                "subnet_id": "subnet-0648be3a3e53036e7"
              }
            ],
            "subnets": [
              "subnet-046ff603bf3c40695",
              "subnet-04fc28ef7b68a9bda",
              "subnet-0648be3a3e53036e7"
            ],
            "vpc_id": "vpc-07db937e560acc168",
            "zone_id": "Z1CMS0P5QUZ6D5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "elkademy-front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:823916992624:listener/net/elkademy-front/cd95ee3481c5513e/6b41204983a59cf6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:823916992624:targetgroup/elkademy-front-http-blue/21c92486273c58f7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:823916992624:listener/net/elkademy-front/cd95ee3481c5513e/6b41204983a59cf6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:823916992624:loadbalancer/net/elkademy-front/cd95ee3481c5513e",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.elkademy-front-lb",
            "aws_lb_target_group.elkademy-front-blue",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "elkademy-front-blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:823916992624:targetgroup/elkademy-front-http-blue/21c92486273c58f7",
            "arn_suffix": "targetgroup/elkademy-front-http-blue/21c92486273c58f7",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:823916992624:targetgroup/elkademy-front-http-blue/21c92486273c58f7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "name": "elkademy-front-http-blue",
            "port": 3000,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07db937e560acc168"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "elkademy-front-green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:823916992624:targetgroup/elkademy-front-http-green/12012bd841bf963c",
            "arn_suffix": "targetgroup/elkademy-front-http-green/12012bd841bf963c",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:823916992624:targetgroup/elkademy-front-http-green/12012bd841bf963c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "name": "elkademy-front-http-green",
            "port": 3000,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07db937e560acc168"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:823916992624:security-group/sg-0c93c9816384febfc",
            "description": "ECS front",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c93c9816384febfc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ECS front",
            "name_prefix": "",
            "owner_id": "823916992624",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07db937e560acc168"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:823916992624:internet-gateway/igw-0ea2be1a3a851c372",
            "id": "igw-0ea2be1a3a851c372",
            "owner_id": "823916992624",
            "tags": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "vpc_id": "vpc-07db937e560acc168"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ea2be1a3a851c372",
            "id": "r-rtb-084a1266bd8934a241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-084a1266bd8934a24",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:823916992624:route-table/rtb-0129dfdf06df22541",
            "id": "rtb-0129dfdf06df22541",
            "owner_id": "823916992624",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "timeouts": null,
            "vpc_id": "vpc-07db937e560acc168"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:823916992624:route-table/rtb-087076d44d44d650e",
            "id": "rtb-087076d44d44d650e",
            "owner_id": "823916992624",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "timeouts": null,
            "vpc_id": "vpc-07db937e560acc168"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:823916992624:route-table/rtb-076c1b414f736db54",
            "id": "rtb-076c1b414f736db54",
            "owner_id": "823916992624",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "timeouts": null,
            "vpc_id": "vpc-07db937e560acc168"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:823916992624:route-table/rtb-084a1266bd8934a24",
            "id": "rtb-084a1266bd8934a24",
            "owner_id": "823916992624",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ea2be1a3a851c372",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "timeouts": null,
            "vpc_id": "vpc-07db937e560acc168"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f695171cc8c7f389",
            "route_table_id": "rtb-0129dfdf06df22541",
            "subnet_id": "subnet-0e87e4b1ee5b4334b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e91d965d96aac1e",
            "route_table_id": "rtb-087076d44d44d650e",
            "subnet_id": "subnet-0e2c4705f01b55e5b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bb559eeb1f622c2",
            "route_table_id": "rtb-076c1b414f736db54",
            "subnet_id": "subnet-0f8b1da188493c636"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acd2310779c82613",
            "route_table_id": "rtb-084a1266bd8934a24",
            "subnet_id": "subnet-04fc28ef7b68a9bda"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bb757ba221d3b1e",
            "route_table_id": "rtb-084a1266bd8934a24",
            "subnet_id": "subnet-0648be3a3e53036e7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d9093a99947150b",
            "route_table_id": "rtb-084a1266bd8934a24",
            "subnet_id": "subnet-046ff603bf3c40695"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:823916992624:subnet/subnet-0e87e4b1ee5b4334b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e87e4b1ee5b4334b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "823916992624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "vpc_id": "vpc-07db937e560acc168"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:823916992624:subnet/subnet-0e2c4705f01b55e5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2c4705f01b55e5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "823916992624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "vpc_id": "vpc-07db937e560acc168"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:823916992624:subnet/subnet-0f8b1da188493c636",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8b1da188493c636",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "823916992624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "vpc_id": "vpc-07db937e560acc168"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:823916992624:subnet/subnet-04fc28ef7b68a9bda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fc28ef7b68a9bda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "823916992624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "vpc_id": "vpc-07db937e560acc168"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:823916992624:subnet/subnet-0648be3a3e53036e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0648be3a3e53036e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "823916992624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "vpc_id": "vpc-07db937e560acc168"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:823916992624:subnet/subnet-046ff603bf3c40695",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046ff603bf3c40695",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "823916992624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "vpc_id": "vpc-07db937e560acc168"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:823916992624:vpc/vpc-07db937e560acc168",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05615451cf85dd9fd",
            "default_route_table_id": "rtb-04b11e4865e8ccbeb",
            "default_security_group_id": "sg-005ebe5ecf8300772",
            "dhcp_options_id": "dopt-0329ea8a5a677b98f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07db937e560acc168",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04b11e4865e8ccbeb",
            "owner_id": "823916992624",
            "tags": {
              "Name": "terraform-cloudpipeline-elkademy"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-elkademy"
            }
          }
        }
      ]
    }
  ]
}